--- a/public/css/red-color.css
+++ b/public/css/red-color.css
@@ -87,7 +87,7 @@ a.track-close:focus,
 .form-meta button,
 .view-more:hover
 {
-	background-color: #ea1b25;
+	background-color: rgba(81,168,177,1);
 }
 
 /*===== Text Color =====*/
@@ -190,7 +190,7 @@ a.track-close:focus,
 .upcoming-event .countdown > li p,
 .mini-post-data
 {
-	color: #ea1b25;
+	color: rgba(81,168,177,1);
 }
 
 /*===== Border Color =====*/
@@ -211,7 +211,7 @@ a.track-close:focus,
 input:checked + .switch-slider,
 .user-info.yellow-bg > img
 {
-	border-color: #ea1b25;
+	border-color: rgba(81,168,177,1);
 }
 
 /*===== Border Top Color =====*/ 
@@ -224,11 +224,11 @@ input:checked + .switch-slider,
 /*===== Border Bottom Color =====*/
 .toggle-item.activate > h4
 {
-	border-bottom-color: #ea1b25;
+	border-bottom-color: rgba(81,168,177,1);
 }
 
 /*===== Border Left Color =====*/ 
 blockquote
 {
-	border-left-color: #ea1b25;
+	border-left-color: rgba(81,168,177,1);
 }
